--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,4 +3,4 @@
 <h1>Dinner Roster Extraordinaire!</h1>
 <h3>Make shared cooking easy and fun</h3>
 
-<img src="/images/homePageImg" alt="Guineapigs eating dinner">
+<img src="/images/homePageImg.jpeg" alt="Guineapigs eating dinner">
