Add new user hbs

--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -7,5 +7,6 @@
 Name: <input type="text" name="name"><br>
 Photo: <input type="image" name="img"><br>
 Dietary Requirements: <input type="text" name="dietaryR"><br>
-<input type="submit" value="Hooray!!">
+<input type="submit" value="Done! Now show me the calendar!">
 </form>
+
