--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -3,10 +3,10 @@
 <h1>A new face, welcome!</h1>
 <h2>Here you can sign up and get cooking for your beloved house-mates. Oh how wonderful!</h2>
 
-<form action="/calendar" method="POST">
+<form action="/addNewUser" method="POST">
 Name: <input type="text" name="name"><br>
 Photo: <input type="image" name="img"><br>
 Dietary Requirements: <input type="text" name="dietaryR"><br>
-<input type="submit" value="Done! Now show me the calendar!">
+<a href="/calendar"><input type="submit" value="Done! Now show me the calendar!"></a>
 </form>
 
