--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,6 +8,8 @@
 <p>
     {{name}}
 </p>
+<a href="/dietaryRequirement" method="POST"> <button>New dietary requirement?</button></a>
+<a href="/addDayAway" method="POST"> <button>Going away?</button></a>
 
 <h2>Dietary Requirements:</h2> 
 <ul>
@@ -29,3 +31,4 @@
     To create one click <a href="/addUser">here</a>
 </p>
 {{/if}}
+
