--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Cooking Calendar</title>
-  </head>
-  <body>
-    {{{body}}}
-  </body>
-</html>
+{{>nav}}
