Add href to nav bar

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,9 +1,9 @@
 <div class="nav">
     <ul>
-        <li>Home</li>
-        <li>Calendar</li>
-        <li>Profiles</li>
-        <li>Dietary Requirements</li>
-        <li>New Profile</li>
+        <a href="/"><li>Home</li></a>
+        <a href="/calendar"><li>Calendar</li></a>
+        <a href="/profile/list"><li>Profiles</li></a>
+        <a href="/dietaryRequirements"><li>Dietary Requirements</li></a>
+        <a href="/addUser"><li>New Profile</li></a>
     </ul>
 </div>
