--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='stylesheet' type='text/css' href='/css/styles.css'>
     <title>Cooking Calendar</title>
   </head>
   <body>
+    {{>nav}}
     {{{body}}}
   </body>
 </html>
