Add migrations and seeds, add styling

--- a/views/addDayAway.hbs
+++ b/views/addDayAway.hbs
@@ -1,5 +1,5 @@
-<h2>Going away? well, you're on the right page</h2>
-<h3>Here you can note down when you are off on adventure and not around for dinner</h3>
+<h2>Going away? Well, you're on the right page</h2>
+<h3>Here you can note down when you are off on adventures and not around for dinner</h3>
 
 {{!-- do I put id in here? I want it do go to this from profile page and take ID with it --}}
 <form action="/addDayAway xxxxxxxx" method="POST"> 
