--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -2,9 +2,15 @@
 <h2>Here you can sign up and get cooking for your beloved house-mates. Oh how wonderful!</h2>
 
 <form action="/addNewUser" method="POST">
-Name: <input type="text" name="name"><br>
-Photo: <input type="image" name="img"><br>
-Dietary Requirements: <input type="text" name="dietaryR"><br>
-<a href="/calendar"><input type="submit" value="Done! Now show me the calendar!"></a>
+  Name: 
+  <input type="text" name="name"> <br>
+  
+  Photo: 
+  <input class="formImg" type="file" name="imgToUpload"> <br>
+  
+  Dietary Requirements: 
+  <input type="text" name="dietaryR"><br>
+  
+  <a href="/calendar"><input type="submit" value="Done! Now show me the calendar!"></a>
 </form>
 
