--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,9 +1,9 @@
-<div class="nav">
-    <ul>
-        <a href="/"><li>Home</li></a>
-        <a href="/calendar"><li>Calendar</li></a>
-        <a href="/profile/list"><li>Profiles</li></a>
-        <a href="/dietaryRequirements"><li>Dietary Requirements</li></a>
-        <a href="/addUser"><li>New Profile</li></a>
+<div>
+    <ul class="nav">
+        <a id="navbar" href="/"><li>Home</li></a>
+        <a id="navbar" href="/calendar"><li>Calendar</li></a>
+        <a id="navbar" href="/profile"><li>Profiles</li></a>
+        <a id="navbar" href="/dietaryRequirements"><li>Dietary Requirements</li></a>
+        <a id="navbar" href="/addUser"><li>New Profile</li></a>
     </ul>
 </div>
