--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,5 +1,7 @@
-{{#if #}}
-{{#each #}}
+
+
+{{#if  }}
+{{#each   }}
 <h1>Oh look it's {{name}}s profile page!!</h1>
 
 <img src="/images/{{img}}" alt="Image of {{name}}">
