--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -1,9 +1,9 @@
 <h1>A new face, welcome!</h1>
 <h2>Here you can sign up and get cooking for your beloved house-mates. Oh how wonderful!</h2>
 
-<form action="/addNewUser" method="POST">
+<form action="/" method="POST">
   Name: 
-  <input type="text" name="name"> <br>
+<input type="text" name="name"> <br>
   
   Photo: 
   <input class="formImg" type="file" name="imgToUpload"> <br>
@@ -11,6 +11,6 @@
   Dietary Requirements: 
   <input type="text" name="dietaryR"><br>
   
-  <a href="/calendar"><input type="submit" value="Done! Now show me the calendar!"></a>
+  <a href="/calendar"><input type="submit" name="newUser" value="">Done! Now show me the calendar!</a>
 </form>
 
