--- a/public/main.css
+++ b/public/main.css
@@ -1,22 +1,24 @@
 #navbar {
   margin: 0px;
   padding: 0px;
-  display: block;
-  width: 100%;
   display:inline-block;
-  list-style-type: none;
+  /* list-style-type: none; */
+  margin: 0 auto;
 }
 
 #navbar li {
   display:inline-block;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #navbar:hover {
-  background-color: blanchedalmond;
+  background-color: rgb(255, 225, 187);
   color: rgb(56, 56, 56);
   border-style: solid;
   border-width: 2px;
-  border-color: darkgoldenrod;
+  border-color: rgb(199, 154, 96);
   border-radius: 12px;
 }
 
@@ -25,17 +27,16 @@ a:visited {
 }
 
 form, #navbar {
-  background-color: blanchedalmond;
+  background-color: rgb(226, 199, 164);
   color: dimgrey;
 }
 
 .formImg {
   border-radius: 25px;
-  width: ;
 }
 
 body {
-  background-color: darkgoldenrod;
+  background-color: rgb(199, 154, 96);
   color: rgb(56, 56, 56);
   font-family: 'McLaren', cursive;
 }
@@ -55,4 +56,20 @@ h2 {
   border-radius: 25px;
   /* max-width: ;
   min-width: ; */
+}
+
+.bunnyImg {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.dRImg {
+  width: 30%;
+  margin-left: 35%;
+  margin-right: 35%;
+}
+
+.centerText {
+  text-align: center;
 }
