--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
 <h1>Dinner Roster Extraordinaire!</h1>
 <h2>Make shared cooking easy and fun</h2>
 
-<img src="/images/homePageImg2.jpg" alt="Bunnies eating dinner together">
+<img class="bunnyImg" src="/images/homePageImg2.jpg" alt="Bunnies eating dinner together">
