add gets and functions for adding users

--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -2,15 +2,23 @@
 <h2>Here you can sign up and get cooking for your beloved house-mates. Oh how wonderful!</h2>
 
 <form action="/" method="POST">
-  Name: 
-<input type="text" name="name"> <br>
+  <section>
+      Name: 
+    <input type="text" name="name">
+  </section>
   
-  Photo: 
-  <input class="formImg" type="file" name="imgToUpload"> <br>
+  <section>
+    Photo: 
+    <input class="formImg" type="file" name="imgToUpload">
+  </section>
   
-  Dietary Requirements: 
-  <input type="text" name="dietaryR"><br>
+  <section>
+      Dietary Requirements: 
+    <input type="text" name="dietaryR">
+  </section>
   
-  <a href="/calendar"><input type="submit" name="newUser" value="">Done! Now show me the calendar!</a>
+  <section class="buttonWrap">
+    <a href="/calendar"><input type="submit" class="button" name="newUser" value="">Done! Now show me the calendar!</a>
+  </section>
 </form>
 
