--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 #navbar {
   margin: 0px;
   padding: 0px;
@@ -72,4 +76,36 @@ h2 {
 
 .centerText {
   text-align: center;
+}
+
+.buttonWrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  width: 140px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: rgb(56, 56, 56);
+  background-color: rgb(255, 225, 187);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  }
+
+.button:hover {
+  background-color: rgb(114, 231, 185);
+  box-shadow: 0px 15px 20px rgba(114, 231, 185, 0.4);
+  color: rgb(255, 225, 187);
+  transform: translateY(-7px);
 }
