--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,8 +5,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> --}}
     
     <link rel='stylesheet' type='text/css' href='/main.css'>
-    <link href="https://fonts.googleapis.com/css?family=McLaren&display=swap" rel="stylesheet">
-    <title>Cooking Calendar</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+    <title>Shared Cooking</title>
   </head>
   <body>
     {{>nav}}
