--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,5 +1,5 @@
-<div>
-    <ul class="nav">
+<div class="nav">
+    <ul>
         <a id="navbar" href="/"><li>Home</li></a>
         <a id="navbar" href="/calendar"><li>Calendar</li></a>
         <a id="navbar" href="/profile"><li>Profiles</li></a>
