Try fix functions, failed

--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -12,11 +12,11 @@
     <input class="button" type="file" name="imgToUpload">
   </section>
   
-  <section class="spacer">
+  {{!-- <section class="spacer">
       Dietary Requirements: 
     <input class="textBox" type="text" name="dietaryR">
   </section>
-  
+   --}}
   <section class="buttonWrap">
     <a href="/calendar"><input type="submit" class="button bottomAtButton" name="newUser" value="Done! Now show me the calendar!"></a>
   </section>
