--- a/views/dietaryRequirements.hbs
+++ b/views/dietaryRequirements.hbs
@@ -4,17 +4,17 @@
     {{#if dietaryRequirement}} 
 <ul>
 {{#each dietaryRequirement}}
-<img  class="dRImg" src="/images/turtle.jpeg" alt="A turtle about to eat a strawberry">
-<h3>The people have spoken! Your challenge is to make a meal but not just any 
-    meal, one which is amazeballs for people who have the following requirements:</h3>
-<li>{{dietaryRequirement}}</li>
+    <img  class="dRImg" src="/images/turtle.jpeg" alt="A turtle about to eat a strawberry">
+    <h3 class="centerText">The people have spoken! Your challenge is to make a meal but not just any 
+        meal, one which is amazeballs for people who have the following requirements:</h3>
+    <li>{{dietaryRequirement}}</li>
 {{/each}}
 {{else}}
-<img class="dRImg" src="/images/squirrel.jpg" alt="A squirrel stuffing nuts into its mouth">
-<p class="centerText" >
-    No one has entered any dietary requirements, whahoo! 
-    Make whatever your stomach desires!
-</p>
+    <img class="dRImg" src="/images/squirrel.jpg" alt="A squirrel stuffing nuts into its mouth">
+    <p class="centerText" >
+        No one has entered any dietary requirements, whahoo! 
+        Make whatever your stomach desires!
+    </p>
 {{/if}}
 </ul>
 </div>
