--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,1 +1,5 @@
-<div id="calendar" style="height: 800px;"></div>
+<div id="calendar" style="height: 800px;">
+    <p>
+        hello calendar???
+    </p>
+</div> 
