--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,7 +1,12 @@
 
+<div class="profileImgBlock" >
+    {{>stars}}
+<img class="profileImg" src="/images/freya.jpg" alt="img">
+</div>
+{{!-- 
 
-{{#if  }}
-{{#each   }}
+{{#if profiles}}
+{{#each profiles}}
 <h1>Oh look it's {{name}}s profile page!!</h1>
 
 <img src="/images/{{img}}" alt="Image of {{name}}">
@@ -27,8 +32,17 @@
 {{/each}}
 {{else}}
 <h1>Wha-woh, this profile doesn't exist!!</h1>
+
+
+<div class="profileImgBlock" >
+    <img class="profileImg" src="/public/images/freya.JPG" alt="">
+    {{stars}}
+</div>
+
+
+
 <p>
     To create one click <a href="/addUser">here</a>
 </p>
 {{/if}}
-
+ --}}
