fix anchor on link

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -38,7 +38,7 @@
 {{else}}
 <h1>Wha-woh, this profile doesn't exist!!</h1>
 <p class="centerText hoverBackground" >
-    To create one click <a href="/addUser">here</a>
+    <a href="/addUser">To create one click here</a>
 </p>
 {{/if}}
 
