fix profile list page to display profile info

--- a/views/profileList.hbs
+++ b/views/profileList.hbs
@@ -2,12 +2,12 @@
 <h2>Here are all the wonderful people you may or may not live with</h2>
 
 <div>
-    {{#if profiles}}
-    {{#each profiles}}
-        <div onClick="something goes in here.">
-             <img src="/images/{{profiles.user_image}}" alt="{{profiles.name}}'s image'">
-             <h2>{{profiles.name}}</h2>
-        </div>
+    {{#if allProfilesData}}
+    {{#each allProfilesData}}
+        {{!-- <div onClick="something goes in here."> --}}
+             <img class="profileImage" src="/images/{{user_image}}" alt="{{name}}'s image'">
+             <h2>{{name}}</h2>
+        {{!-- </div> --}}
     {{/each}}
     {{else}}
     <p>
