--- a/public/main.css
+++ b/public/main.css
@@ -117,24 +117,41 @@ h2 {
   margin-right: 35%;
 }
 
+.imgBox {
+  display: flex;
+}
+
 .profileImgBlock {
-  width: 30%;
-  height: 50%;
+  /* width: 30%;
+  height: 50%; */
   /* text-align: center; */
   /* display: block; */
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
 }
 
 .profileImg {
-  z-index: 2;
-  height: 80%;
+  /* z-index: 2; */
+  /* height: 80%;
   border-radius: 100%;
   margin-left: 12%;
   margin-top: 12%;
-  position: relative;
+  position: relative; */
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
 }
 
 .starImgs {
-  z-index: 1;
+  /* z-index: 1; */
   position: absolute;
   /* display: none; */
   /* visibility: hidden;  */
@@ -179,6 +196,10 @@ h2 {
   margin-top: 200px;
   margin-left: 0px;
 } */
+
+.profileListImgages {
+
+}
 
 
 
