--- a/views/profileList.hbs
+++ b/views/profileList.hbs
@@ -3,12 +3,16 @@
 
 <div>
     {{#if allProfilesData}}
-    {{#each allProfilesData}}
-        {{!-- <div onClick="something goes in here."> --}}
-             <img class="profileImage" src="/images/{{user_image}}" alt="{{name}}'s image'">
-             <h2>{{name}}</h2>
-        {{!-- </div> --}}
-    {{/each}}
+    <div class="imgBox" >
+        {{#each allProfilesData}}
+            <a href="profile/{{user_id}}">
+                <div class="profileImgBlock" onClick="something goes in here.">
+                    <img class="profileImg portrait"  src="/images/{{user_image}}" alt="{{name}}'s image'">
+                    <h2>{{name}}</h2>
+                </div>
+            </a>
+        {{/each}}
+    </div>
     {{else}}
     <p>
         *silence*... <br> 
