fix DR page to show db info

--- a/views/dietaryRequirements.hbs
+++ b/views/dietaryRequirements.hbs
@@ -1,13 +1,13 @@
 <h1>Dietary Requirements</h1>
 
 <div>
-    {{#if dietaryRequirement}} 
-<ul>
-{{#each dietaryRequirement}}
-    <img  class="dRImg" src="/images/turtle.jpeg" alt="A turtle about to eat a strawberry">
+    {{#if data}} 
+    <img  class="dRImg" src="/images/turtle.jpg" alt="A turtle about to eat a strawberry">
     <h3 class="centerText">The people have spoken! Your challenge is to make a meal but not just any 
         meal, one which is amazeballs for people who have the following requirements:</h3>
-    <li>{{dietaryRequirement}}</li>
+<ul>
+{{#each data}}
+    <a href="/profile/{{person_id}}""><li>{{requirement}}</li></a>
 {{/each}}
 {{else}}
     <img class="dRImg" src="/images/squirrel.jpg" alt="A squirrel stuffing nuts into its mouth">
