Add broken code for bullet point imgs on DR

--- a/public/main.css
+++ b/public/main.css
@@ -250,3 +250,14 @@ h2 {
   padding-top: 5%;
   padding-bottom: 5%;
 }
+
+/* ul.customBullets {
+  height: 54px;
+  padding-left: 44px;
+  padding-top: 3px;
+} */
+
+/* ul.customBulletsBox {
+  margin-left: 40px;
+  list-style:none;
+} */
