--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -1,7 +1,7 @@
 <h1>A new face, welcome!</h1>
 <h2>Here you can sign up and get cooking for your beloved house-mates. Oh how wonderful!</h2>
 
-<form class="addUserForm" action="/" method="POST">
+<form class="addUserForm" action="/addUser" method="POST">
   <section>
       Name: 
     <input class="textBox" type="text" name="name">
@@ -9,7 +9,7 @@
   
   <section class="spacer" >
     Photo: 
-    <input class="button" type="file" name="imgToUpload">
+    <input class="button" type="file" name="userImage">
   </section>
   
   {{!-- <section class="spacer">
