--- a/public/main.css
+++ b/public/main.css
@@ -39,6 +39,7 @@ html, body {
   border-width: 2px;
   border-color: rgb(199, 154, 96);
   border-radius: 12px;
+  box-shadow: 0px 15px 20px rgba(255, 225, 187,  0.4);
 }
 
 form, #navbar {
@@ -213,7 +214,6 @@ h2 {
 
 .button {
   /* width: 340px; */
-  height: 45px;
   font-family: 'Roboto', sans-serif;
   font-size: 11px;
   text-transform: uppercase;
@@ -235,16 +235,28 @@ h2 {
   color: rgb(56, 56, 56);
   transform: translateY(-7px);
 }
+ .buttonLarge {
+  height: 45px;
+ }
 
-.bottomAtButton {
+ .buttonSmall {
+  height: 25px;
+ }
+
+.buttonAtBottom {
   margin-top: 20%;
+}
+
+.buttonDropdown {
+  height: 25px;
+
 }
 
 .textBox {
   border-radius: 12px;
 }
 
-.addUserForm {
+form {
   /* text-align: center; */
   padding-left: 35%;
   padding-top: 5%;
@@ -261,3 +273,15 @@ h2 {
   margin-left: 40px;
   list-style:none;
 } */
+
+/* .dropdownList {
+  background-color: rgb(114, 231, 185);
+  box-shadow: 0px 15px 20px rgba(114, 231, 185, 0.4);
+  color: rgb(56, 56, 56);
+} */
+
+.buttonDropdown option {
+  background-color: rgb(114, 231, 185);
+  box-shadow: 0px 15px 20px rgba(114, 231, 185, 0.4);
+  color: rgb(56, 56, 56);
+}
