Add function for add day away

--- a/views/addDayAway.hbs
+++ b/views/addDayAway.hbs
@@ -2,7 +2,12 @@
 <h3 class="centerText" >Here you can note down when you are off on adventures and not around for dinner</h3>
 
 {{!-- do I put id in here? I want it do go to this from profile page and take ID with it --}}
-<form action="/addDayAway xxxxxxxx" method="POST"> 
+<form action="/addDayAway" method="POST"> 
+
+<section>
+    Date away:
+    <input class="textBox" type="text" name="dayEntered" value="">
+</section>
 
 </section>
 {{!-- Name: <input type="text" name="name"><br> --}}
