1/2 make dietary functionality

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -32,9 +32,9 @@
     {{/if}}
 </ul>
 
-<a href="/dietaryRequirement/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="New dietary requirement?"></a>
-<a href="/addDayAway/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="Going away?"></a>
-<a href="/selectDay/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="Select or change your cooking day"></a>
+<a href="addDietaryRequirement/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="New dietary requirement?"></a>
+<a href="addDayAway/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="Going away?"></a>
+<a href="selectDay/{{user_id}}"><input class="button buttonLarge buttonAtBottom" type="submit" value="Select or change your cooking day"></a>
 
 {{else}}
 <h1>Wha-woh, this profile doesn't exist!!</h1>
