--- a/views/addNewDietaryRequirement.hbs
+++ b/views/addNewDietaryRequirement.hbs
@@ -1,1 +1,27 @@
-<h1>Hello!!</h1>
+<h2>Got an allergy or something you are not eating? Great! Add it to the list.</h2>
+<h3 class="centerText">Here you can let your housemates know what foods to avoid using when cooking.</h3>  
+
+<form action="/addDietaryRequirement/:id" method="POST"> 
+
+<section>
+    Requirement:
+    <input class="textBox" type="text" name="dayEntered" value="">
+</section>
+
+{{!-- <section>
+    Want to add another requirement? <br>
+    <button class="button smallLarge" onclick="">Yes please!</button> <button class="button smallLarge">Nope, I'm all done.</button>
+</section> --}}
+
+</section>
+<section class="buttonWrap" >
+    <input class="button buttonLarge buttonAtBottom" type="submit" value="Done! Now show me the calendar!">
+</section>
+{{!-- STRETCH --}}
+{{!-- Name: <input type="text" name="name"><br> --}}
+{{!-- if day already picked ask if they want to pick another day or take day from who already has that day --}}
+
+{{!-- add extra commented out section which adds a new input section if yes is clicked. If not clicked then sumbit form. --}}
+
+</form>
+
