--- a/views/dietaryRequirements.hbs
+++ b/views/dietaryRequirements.hbs
@@ -2,10 +2,12 @@
 
 <div>
     {{#if data}} 
-    <img  class="dRImg" src="/images/turtle.jpg" alt="A turtle about to eat a strawberry">
+    <div class="centerText" >
+        <img  class="dRImg" src="/images/turtle.jpg" alt="A turtle about to eat a strawberry">
+    </div>
     <h3 class="centerText">The people have spoken! Your challenge is to make a meal but not just any 
         meal, one which is amazeballs for people who have the following requirements:</h3>
-<ul class="customBulletsBox" >
+<ul class="customBulletsBox centerList" >
 {{#each data}}
     <a class="customBullets" href="/profile/{{person_id}}"><li style="listStyleImage: url('/images/{{user_image}}'); padding: .3em 0 1em 40px;">{{requirement}}</li></a>
 {{/each}}
