--- a/views/addUser.hbs
+++ b/views/addUser.hbs
@@ -7,12 +7,12 @@
     <input class="textBox" type="text" name="name">
   </section>
   
-  <section class="spacer" >
+  <section class="spacerTop" >
     Photo: 
     <input class="button buttonSmall" type="file" name="userImage">
   </section>
   
-  {{!-- <section class="spacer">
+  {{!-- <section class="spacerTop">
       Dietary Requirements: 
     <input class="textBox" type="text" name="dietaryR">
   </section>
