--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,5 +1,79 @@
-<div id="calendar" style="height: 800px;">
-    <p>
-        hello calendar???
-    </p>
+<h2>Weekly Calendar!</h2>
+<h3 class="centerText spacerBottom" >See who's down for cooking this week</h3>
+
+<div id="calendar" {{!--style="height: 800px;"--}}>
+
+
+    <div class='calendar'>
+    <div class='row'>
+        <div class='column'>
+            <div class='orange-column'>
+                <h2 class="day Monday">Monday</h2>
+                {{#if monday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+        <div class='column'>
+            <div class='blue-column'>
+                <h2 class="day Tuesday">Tuesday</h2>
+                {{#if tuesday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+        <div class='column'>
+            <div class='green-column'>
+                <h2 class="day Wednesday">Wednesday</h2>
+                {{#if wednesday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+    </div>
+    <div class='row 2'>
+        <div class='column'>
+            <div class='green-column'>
+                <h2 class="day Thursday">Thursday</h2>
+                {{#if thursday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+        <div class='column'>
+            <div class='orange-column'>
+                <h2 class="day Friday">Friday</h2>
+                {{#if friday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+        <div class='column'>
+            <div class='blue-column'>
+                <h2 class="day Saturday">Saturday</h2>
+                {{#if saturday}}
+                {{user_image}}
+                {{/if}}
+            </div>
+        </div>
+    </div>
+        <div class='row 2'>
+            <div class='column'>
+                <div class='green-column'>
+                    <h2 class="day Sunday">Sunday</h2>
+                    {{#if sunday}}
+                    {{user_image}}
+                    {{/if}}
+                </div>
+            </div>
+            <div class='column'>
+                <div >
+                </div>
+            </div>
+            <div class='column'>
+                <div >
+                </div>
+            </div>
+        </div>
+    </div>
 </div> 
