--- a/views/dietaryRequirements.hbs
+++ b/views/dietaryRequirements.hbs
@@ -21,7 +21,7 @@
 </ul>
 </div>
 
-<div class="centerText">
-    <h2>Remembered you are highly allergic to nuts? Quick, add it to your profile!</h2>
+<div class="centerText hoverBackground">
+  <a href="/profile">  <h2>Remembered you are highly allergic to nuts? Quick, add it to your profile!</h2></a>
     
 </div>
