--- a/public/main.css
+++ b/public/main.css
@@ -315,16 +315,15 @@ form {
 }
 
 .blue-column {
-  border-style: solid;
-  border-width: 5px;
   border-color: rgba(0, 0, 255, 0.267);
-  height: 300px;
 }
 
 .green-column {
+  border-color: rgba(0, 128, 0, 0.295);
+}
+
+.green-column, .blue-column {
   border-style: solid;
   border-width: 5px;
-  border-color: rgba(0, 128, 0, 0.295);
-
   height: 300px;
 }
