add centering box class

--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -1,5 +1,5 @@
-<h2>Weekly Calendar!</h2>
-<h3 class="centerText spacerBottom" >See who's down for cooking this week</h3>
+<h1>Weekly Calendar!</h2>
+<h2 class="centerText spacerBottom" >See who's down for cooking this week</h3>
 
 <div id="calendar" {{!--style="height: 800px;"--}}>
 
@@ -7,8 +7,8 @@
     <div class='calendar'>
     <div class='row'>
         <div class='column'>
-            <div class='orange-column'>
-                <h2 class="day Monday">Monday</h2>
+            <div class='green-column'>
+                <h3 class="day Monday">Monday</h2>
                 {{#if monday}}
                 {{user_image}}
                 {{/if}}
@@ -16,7 +16,7 @@
         </div>
         <div class='column'>
             <div class='blue-column'>
-                <h2 class="day Tuesday">Tuesday</h2>
+                <h3 class="day Tuesday">Tuesday</h2>
                 {{#if tuesday}}
                 {{user_image}}
                 {{/if}}
@@ -24,7 +24,7 @@
         </div>
         <div class='column'>
             <div class='green-column'>
-                <h2 class="day Wednesday">Wednesday</h2>
+                <h3 class="day Wednesday">Wednesday</h2>
                 {{#if wednesday}}
                 {{user_image}}
                 {{/if}}
@@ -33,16 +33,16 @@
     </div>
     <div class='row 2'>
         <div class='column'>
-            <div class='green-column'>
-                <h2 class="day Thursday">Thursday</h2>
+            <div class='blue-column'>
+                <h3 class="day Thursday">Thursday</h2>
                 {{#if thursday}}
                 {{user_image}}
                 {{/if}}
             </div>
         </div>
         <div class='column'>
-            <div class='orange-column'>
-                <h2 class="day Friday">Friday</h2>
+            <div class='green-column'>
+                <h3 class="day Friday">Friday</h2>
                 {{#if friday}}
                 {{user_image}}
                 {{/if}}
@@ -50,7 +50,7 @@
         </div>
         <div class='column'>
             <div class='blue-column'>
-                <h2 class="day Saturday">Saturday</h2>
+                <h3 class="day Saturday">Saturday</h2>
                 {{#if saturday}}
                 {{user_image}}
                 {{/if}}
@@ -60,7 +60,7 @@
         <div class='row 2'>
             <div class='column'>
                 <div class='green-column'>
-                    <h2 class="day Sunday">Sunday</h2>
+                    <h3 class="day Sunday">Sunday</h2>
                     {{#if sunday}}
                     {{user_image}}
                     {{/if}}
