--- a/public/main.css
+++ b/public/main.css
@@ -16,15 +16,6 @@ html, body {
   font-family: 'Noto Sans', sans-serif;
 }
 
-#nav {
-  /* padding: 0px;
-  display:inline-block;
-  margin: 0 auto;
-  padding-left: 20%;
-  margin-left: 20%;
-  margin-inline-start: 10%; */
-}
-
 #navbar li {
   display: inline-block;
   /* margin: 0 auto; */
@@ -67,19 +58,19 @@ body {
 
 h1 {
   color: rgb(31, 24, 43);
-  text-align: center;
 }
 
-h2 {
-  text-align: center;
-}
-
-.centerText {
+.centerText, h1, h2, h3 {
   text-align: center;
 }
 
 .centerList {
   margin-left: 40%;
+}
+
+.centerStuffInThisBox {
+  display: flex;
+  justify-content: center;  
 }
 
 .spacerTop {
@@ -98,26 +89,13 @@ h2 {
 
 
 
-/* .formImg {
-  border-radius: 25px;
-} */
-
-/* .homeImg {
-  width: 80%;
-  margin: 0 auto;
-  border-radius: 25px;
-  /* max-width: ;
-  min-width: ;
-} */
-
 .bunnyImg, .dRImg, .profileImg, .starImgs, .profilePageImg {
   border-radius: 25px;
 }
 
 .bunnyImg {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  width: 60%;
+  /* margin-left: 20%; */
 }
 
 .dRImg, .profilePageImg {
@@ -296,7 +274,9 @@ form {
 /* calendar styling */
 
 .calendar {
-  margin: 15px;
+
+  margin-left: 200px;
+  margin-right: 200px;
   background-color: rgba(255, 0, 0, 0.226);
 }
 
@@ -325,5 +305,5 @@ form {
 .green-column, .blue-column {
   border-style: solid;
   border-width: 5px;
-  height: 300px;
+  height: 180px;
 }
