--- a/public/main.css
+++ b/public/main.css
@@ -10,8 +10,10 @@ secondary font (in caps) - font-family: 'Roboto', sans-serif
 */
 
 
+
+
 html, body {
-  height: 100%;
+  /* height: 100%; */
   /* font-family: 'Roboto', sans-serif */
   font-family: 'Noto Sans', sans-serif;
 }
@@ -29,7 +31,7 @@ html, body {
   border-style: solid;
   border-width: 2px;
   border-color: rgb(199, 154, 96);
-  border-radius: 12px;
+  border-radius: 0px 12px 12px 0px;
   box-shadow: 0px 15px 20px rgba(255, 225, 187,  0.4);
 }
 
@@ -274,7 +276,6 @@ form {
 /* calendar styling */
 
 .calendar {
-
   margin-left: 200px;
   margin-right: 200px;
   background-color: rgba(255, 0, 0, 0.226);
