--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,4 +1,4 @@
-<div class="centerStuffInThisBox">
+<div class="centerThisBox">
     <ul>
         <a id="navbar" href="/"><li>Home</li></a>
         <a id="navbar" href="/calendar"><li>Calendar</li></a>
