--- a/public/main.css
+++ b/public/main.css
@@ -62,7 +62,7 @@ h1 {
   color: rgb(31, 24, 43);
 }
 
-.centerText, h1, h2, h3 {
+.centerText, h1, h2 {
   text-align: center;
 }
 
@@ -70,7 +70,7 @@ h1 {
   margin-left: 40%;
 }
 
-.centerStuffInThisBox {
+.centerThisBox {
   display: flex;
   justify-content: center;  
 }
