--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -8,7 +8,7 @@
     <div class='row'>
         <div class='column'>
             <div class='green-column'>
-                <h3 class="day Monday">Monday</h2>
+                <h3 class="day Monday centerText">Monday</h2>
                 {{#if monday}}
                 {{user_image}}
                 {{/if}}
@@ -16,7 +16,7 @@
         </div>
         <div class='column'>
             <div class='blue-column'>
-                <h3 class="day Tuesday">Tuesday</h2>
+                <h3 class="day Tuesday centerText">Tuesday</h2>
                 {{#if tuesday}}
                 {{user_image}}
                 {{/if}}
@@ -24,7 +24,7 @@
         </div>
         <div class='column'>
             <div class='green-column'>
-                <h3 class="day Wednesday">Wednesday</h2>
+                <h3 class="day Wednesday centerText">Wednesday</h2>
                 {{#if wednesday}}
                 {{user_image}}
                 {{/if}}
@@ -34,7 +34,7 @@
     <div class='row 2'>
         <div class='column'>
             <div class='blue-column'>
-                <h3 class="day Thursday">Thursday</h2>
+                <h3 class="day Thursday centerText">Thursday</h2>
                 {{#if thursday}}
                 {{user_image}}
                 {{/if}}
@@ -42,7 +42,7 @@
         </div>
         <div class='column'>
             <div class='green-column'>
-                <h3 class="day Friday">Friday</h2>
+                <h3 class="day Friday centerText">Friday</h2>
                 {{#if friday}}
                 {{user_image}}
                 {{/if}}
@@ -50,7 +50,7 @@
         </div>
         <div class='column'>
             <div class='blue-column'>
-                <h3 class="day Saturday">Saturday</h2>
+                <h3 class="day Saturday centerText">Saturday</h2>
                 {{#if saturday}}
                 {{user_image}}
                 {{/if}}
@@ -60,7 +60,7 @@
         <div class='row 2'>
             <div class='column'>
                 <div class='green-column'>
-                    <h3 class="day Sunday">Sunday</h2>
+                    <h3 class="day Sunday centerText">Sunday</h2>
                     {{#if sunday}}
                     {{user_image}}
                     {{/if}}
