--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>Dinner Roster Extraordinaire!</h1>
 <h2>Make shared cooking easy and fun</h2>
 
-<div class="centerStuffInThisBox" >
+<div class="centerThisBox" >
     <img class="bunnyImg" src="/images/homePageImg2.jpg" alt="Bunnies eating dinner together">
 </div>
