--- a/views/addDayAway.hbs
+++ b/views/addDayAway.hbs
@@ -1,7 +1,7 @@
 <h2>Going away? Well, you're on the right page</h2>
 <h3 class="centerText">Here you can note down when you are off on adventures and not around for dinner</h3>
 
-<form action="/addDayAway/:id" method="POST"> 
+<form action="/addDayAway/{{user_id}}" method="POST"> 
 
 <section>
     Date away:
